Changed fix for overlapping hr
Now padding the bottom of the container so that nothing overlaps the
absolutely positioned link and hr.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -248,13 +248,6 @@ label.btn input[type=checkbox] {
     margin-left: auto;
     margin-right: auto;
     width: auto;
-}
-
-.hero-img.visible-xs {
-    max-height: 200px;
-}
-
-#hero-section-parent aside .hero-img {
     max-height: 760px;
 }
 
@@ -363,6 +356,7 @@ hr {
 .panel-default {
     background-color: rgba(255, 255, 255, .5);
     padding: 10px;
+    padding-bottom: 50px;
 }
 
 .jumbotron {
